--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "chartjs-plugin-datalabels": "^2.2.0",
     "react": "^18.3.1",
@@ -17,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-router": "^7.0.2",
     "react-router-dom": "^7.0.2",
+    "react-spinners": "^0.15.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
