hot-fix(versel-config)

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,3 @@
 {
-  "routes": [
-    {
-      "src": "/backend/(.*)",
-      "dest": "/backend/$1"
-    }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
